--- a/futurecard/cdv-home.html
+++ b/futurecard/cdv-home.html
@@ -18,7 +18,7 @@
             justify-content: center; /* メニューボタンを水平方向に中央揃え */
             align-items: center; /* メニューボタンを垂直方向に中央揃え */
             height: 50px; /* メニューエリアの高さを設定 */
-            background-color: #333; /* メニューエリアの背景色を設定 */
+            background-color: #586e85; /* メニューエリアの背景色を設定 */
         }
 
         .menu ul {
@@ -37,12 +37,12 @@
             padding: 10px;
             text-decoration: none;
             color: #fff;
-            background-color: #919191;
+            background-color: #7c9cbd;
             border-radius: 5px;
         }
 
         .menu a:hover {
-            background-color: #555;
+            background-color: #555d71;
         }
 
         .content {
@@ -68,22 +68,19 @@
     <div class="menu">
         <!-- ここにメニューのコンテンツを配置 -->
         <ul>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('entry.html')">Journaring</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('siwake.html')">sorting</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('md.html')">Export MD</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('adddate.html')">add DATE</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('today.html')">DAYS</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('outliner.html')">outline</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('futurecard.html')">future card</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('card.html')">card</a></li>
-
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-week.html')">Week</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-month.html')">month</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-quater')">quater</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdedit.html')">edit</a></li>
+   
+            
         </ul>
     </div>
 
     <!-- コンテンツエリア -->
     <div class="content">
         <!-- ここに別のHTMLを埋め込む -->
-        <iframe id="contentFrame" src="entry.html" frameborder="0"></iframe>
+        <iframe id="contentFrame" src="cdv-week.html" frameborder="0"></iframe>
     </div>
 
 </body>
