--- a/futurecard/cdv-home.html
+++ b/futurecard/cdv-home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -69,7 +69,7 @@
         <ul>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-week.html')">Week</a></li>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-month.html')">month</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-quater')">quater</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-quater.html')">quater</a></li>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdedit.html')">edit</a></li>
    
             
