--- a/futurecard/cdv-home.html
+++ b/futurecard/cdv-home.html
@@ -46,12 +46,13 @@
 
         .content {
             overflow: auto;
-            height: 100vh;
+            height: 100vh; /* 画面の高さいっぱいに表示 */
+            width: 100vw; /* 画面の幅いっぱいに表示 */
         }
 
         #contentFrame {
-            width: 100%;
-            height: 100%;
+            width: 100vh;
+            height: 100vh;
             border: none;
         }
     </style>
