--- a/futurecard/cdv-quater.html
+++ b/futurecard/cdv-quater.html
@@ -17,7 +17,7 @@
       border: 1px solid #ccc;
       padding: 10px;
       margin-right: 10px;
-      max-width: 300px; /* 例として横幅を600pxに固定 */
+      width: 300px; 
       flex: 0 0 auto;
     }
 
