--- a/futurecard/cdedit.html
+++ b/futurecard/cdedit.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
   <title>Card Editor</title>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
@@ -22,13 +21,32 @@
       });
     });
   </script>
-</head>
-<body>
-  <textarea id="textInput" rows="30" cols="50"></textarea>
   <style>
-    .body{
-        text-align: center;
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh; /* 画面の高さいっぱいに表示 */
+      margin: 0; /* ボディの余白をなくす */
+      background-image: url('https://images.unsplash.com/photo-1515445946706-a8024608d459?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+      background-size: cover;
+      background-position: center;
+  
+    }
+
+    #textInput {
+      width: 50%;
+      height: 500px;
+      margin-bottom: 20px;
+      background-color: rgba(255, 255, 255, 0.6); /* 半透明の白い背景 */
+      border: none; /* 枠をなくす */
+      padding: 10px; /* テキストと背景の間隔を追加 */
+      resize: none; /* リサイズを禁止 */
     }
   </style>
+</head>
+<body>
+  <textarea id="textInput" rows="10" cols="30"></textarea>
+  
 </body>
 </html>
