--- a/futurecard/cdv-month.html
+++ b/futurecard/cdv-month.html
@@ -14,11 +14,14 @@
     }
 
     .card {
-      border: 1px solid #ccc;
+      background-color: #e8e9f298;
       padding: 10px;
       margin-right: 10px;
-      width: 300px; 
+      width: 300px;
+      height: 150px; 
       flex: 0 0 auto;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px #bfc1c8e0;
     }
 
     h1, h2 {
