--- a/futurecard/cdv-quater.html
+++ b/futurecard/cdv-quater.html
@@ -14,13 +14,31 @@
     }
 
     .card {
-      border: 1px solid #ccc;
+      background-color: #f2f0e898;
       padding: 10px;
       margin-right: 10px;
       width: 300px; 
+      height: 150px; 
       flex: 0 0 auto;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px #c8c3bfe0;
     }
 
+    .cardsContainer::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    .cardsContainer::-webkit-scrollbar-thumb {
+      background-color: #587dc33f; /* カードの背景色と同じに設定 */
+      border-radius: 6px;
+      border: 0px solid #ffffff; /* グリップの境界線の色 */
+    }
+
+    .cardsContainer::-webkit-scrollbar-track {
+      background-color: #ffffff; /* スクロールバーのトラックの色 */
+      border-radius: 6px;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    }
     h1, h2 {
       margin-top: 0;
     }
