--- a/futurecard/cdv-month.html
+++ b/futurecard/cdv-month.html
@@ -24,6 +24,21 @@
       box-shadow: 5px 5px 5px #bfc1c8e0;
     }
 
+    .cardsContainer::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    .cardsContainer::-webkit-scrollbar-thumb {
+      background-color: #587dc33f; /* カードの背景色と同じに設定 */
+      border-radius: 6px;
+      border: 0px solid #ffffff; /* グリップの境界線の色 */
+    }
+
+    .cardsContainer::-webkit-scrollbar-track {
+      background-color: #ffffff; /* スクロールバーのトラックの色 */
+      border-radius: 6px;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    }
     h1, h2 {
       margin-top: 0;
     }
