--- a/futurecard/cdv-quater.html
+++ b/futurecard/cdv-quater.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Card Viewer</title>
   <style>
+    /* 共通のスタイル */
     .cardsContainer {
       display: flex;
       flex-wrap: nowrap;
@@ -14,77 +15,90 @@
     }
 
     .card {
-      background-color: #f2f0e898;
       padding: 10px;
       margin-right: 10px;
-      width: 300px; 
-      height: 150px; 
+      width: 300px;
+      min-height: 150px;
       flex: 0 0 auto;
       border-radius: 10px;
-      box-shadow: 5px 5px 5px #c8c3bfe0;
+      box-shadow: 5px 5px 5px #bfc8c7e0;
+      background-color: #e8f2f198; /* デフォルトの背景色 */
     }
 
+    .card h2 {
+      margin-top: 0;
+    }
+
+    /* スクロールバーのスタイル */
     .cardsContainer::-webkit-scrollbar {
       width: 12px;
     }
 
     .cardsContainer::-webkit-scrollbar-thumb {
-      background-color: #587dc33f; /* カードの背景色と同じに設定 */
+      background-color: #587dc33f;
       border-radius: 6px;
-      border: 0px solid #ffffff; /* グリップの境界線の色 */
+      border: 0px solid #ffffff;
     }
 
     .cardsContainer::-webkit-scrollbar-track {
-      background-color: #ffffff; /* スクロールバーのトラックの色 */
+      background-color: #ffffff;
       border-radius: 6px;
       box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
-    }
-    h1, h2 {
-      margin-top: 0;
     }
   </style>
 </head>
 <body>
-  <div class="cardsContainer" id="cardsContainer"></div>
+  <!-- ３つの段のカードコンテナ -->
+  <div class="cardsContainer" id="cardsContainer1"></div>
+  <div class="cardsContainer" id="cardsContainer2"></div>
+  <div class="cardsContainer" id="cardsContainer3"></div>
 
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       // ローカルストレージからデータを読み込む
       const savedText = localStorage.getItem("card");
-      const cardsContainer = document.getElementById("cardsContainer");
 
-      // データがあればカードを生成して表示する
+      // カードがあれば３つの段に振り分けて表示
       if (savedText) {
         const lines = savedText.split('\n');
-        let isInQuaterSection = false; // Quaterセクション内かどうかのフラグ
-        let currentCard = null;
+        let isInWeekSection = false;
+        let isInMonthSection = false;
+        let isInQuaterSection = false;
 
         for (const line of lines) {
-          if (line.startsWith("# Quater")) {
-            isInQuaterSection = true;
-          } else if (isInQuaterSection && line.startsWith("## ")) {
-            // Quaterセクション内の"## "で始まる行がカードの開始
-            if (currentCard !== null) {
-              cardsContainer.appendChild(currentCard);
-            }
+          // １段目の処理
+          if (!isInMonthSection && !isInQuaterSection && line.startsWith("# Week")) {
+            appendCard("cardsContainer1", line);
+          } else if (line.startsWith("# Month")) {
+            // Monthセクションまで来たら処理を終了
+            isInWeekSection = false;
+            break;
+          }
 
-            currentCard = document.createElement("div");
-            currentCard.classList.add("card");
-            const title = document.createElement("h2");
-            title.textContent = line.substring(3).trim();
-            currentCard.appendChild(title);
-          } else if (currentCard) {  // nullでない場合にのみ実行
-            // カードの中身にテキストを追加
-            const paragraph = document.createElement("p");
-            paragraph.textContent = line;
-            currentCard.appendChild(paragraph);
+          // ２段目の処理
+          if (!isInWeekSection && !isInQuaterSection && line.startsWith("# Month")) {
+            appendCard("cardsContainer2", line);
+          } else if (line.startsWith("# Quater")) {
+            // Quaterセクションまで来たら処理を終了
+            isInMonthSection = false;
+            break;
+          }
+
+          // ３段目の処理
+          if (!isInWeekSection && !isInMonthSection && line.startsWith("# Quater")) {
+            appendCard("cardsContainer3", line);
           }
         }
+      }
 
-        // 最後のカードを表示
-        if (currentCard !== null) {
-          cardsContainer.appendChild(currentCard);
-        }
+      function appendCard(containerId, line) {
+        const container = document.getElementById(containerId);
+        const card = document.createElement("div");
+        card.classList.add("card");
+        const title = document.createElement("h2");
+        title.textContent = line.substring(3).trim();
+        card.appendChild(title);
+        container.appendChild(card);
       }
     });
   </script>
