--- a/futurecard/cdv-week.html
+++ b/futurecard/cdv-week.html
@@ -18,10 +18,11 @@
       padding: 10px;
       margin-right: 10px;
       width: 300px; 
-      height: 150px; 
+      min-height: 300px; 
       flex: 0 0 auto;
       border-radius: 10px;
       box-shadow: 5px 5px 5px #bfc8c7e0;
+      line-height: 0.6;
     }
 
     .cardsContainer::-webkit-scrollbar {
@@ -43,7 +44,44 @@
     h1, h2 {
       margin-top: 0;
     }
-  </style>
+    .cardsContainer {
+      display: flex;
+      flex-wrap: nowrap;
+      overflow-x: auto;
+      white-space: nowrap;
+      margin: 0 auto; /* 中央寄せのために追加 */
+    }
+
+    .card {
+      background-color: #e8e9f298;
+      padding: 10px;
+      margin-right: 10px;
+      width: 300px;
+      height: 150px; 
+      flex: 0 0 auto;
+      border-radius: 10px;
+      box-shadow: 5px 5px 5px #bfc1c8e0;
+    }
+
+    .cardsContainer::-webkit-scrollbar {
+      width: 12px;
+    }
+
+    .cardsContainer::-webkit-scrollbar-thumb {
+      background-color: #587dc33f; /* カードの背景色と同じに設定 */
+      border-radius: 6px;
+      border: 0px solid #ffffff; /* グリップの境界線の色 */
+    }
+
+    .cardsContainer::-webkit-scrollbar-track {
+      background-color: #ffffff; /* スクロールバーのトラックの色 */
+      border-radius: 6px;
+      box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.1);
+    }
+    h1, h2 {
+      margin-top: 0;
+    }
+      </style>
 </head>
 <body>
   <div class="cardsContainer" id="cardsContainer"></div>
