--- a/futurecard/cdv-home.html
+++ b/futurecard/cdv-home.html
@@ -65,7 +65,7 @@
     <div class="menu">
         <!-- ここにメニューのコンテンツを配置 -->
         <ul>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('all-card.html')">All</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('all-card-edit.html')">All</a></li>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-week.html')">Week</a></li>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-month.html')">month</a></li>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-quater.html')">quater</a></li>
@@ -78,7 +78,7 @@
     <!-- コンテンツエリア -->
     <div class="content">
         <!-- ここに別のHTMLを埋め込む -->
-        <iframe id="contentFrame" src="all-card.html" frameborder="0"></iframe>
+        <iframe id="contentFrame" src="all-card-edit.html" frameborder="0"></iframe>
     </div>
 
 </body>
