--- a/futurecard/all-card.html
+++ b/futurecard/all-card.html
@@ -13,7 +13,9 @@
       white-space: nowrap;
       margin: 0 auto; /* 中央寄せのために追加 */
     }
-
+    .cardsContainer1 {
+      background-color: aqua;
+    }
     .card {
       padding: 10px;
       margin-right: 10px;
