--- a/futurecard/cdv-home.html
+++ b/futurecard/cdv-home.html
@@ -66,12 +66,7 @@
         <!-- ここにメニューのコンテンツを配置 -->
         <ul>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('all-card-edit.html')">All</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-week.html')">Week</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-month.html')">month</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdv-quater.html')">quater</a></li>
-            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdedit.html')">edit</a></li>
-   
-            
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdedit.html')">Edit</a></li>
         </ul>
     </div>
 
