--- a/futurecard/all-card-edit.html
+++ b/futurecard/all-card-edit.html
@@ -5,6 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Editable Cards</title>
   <style>
+    .body{
+      background-image: url('https://images.unsplash.com/photo-1682686581220-689c34afb6ef?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+      background-size: cover;
+      background-position: center;
+
+    }
     .card-container {
       display: flex;
       flex-direction: column;
