--- a/futurecard/cdv-home.html
+++ b/futurecard/cdv-home.html
@@ -67,6 +67,9 @@
         <ul>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('all-card-edit.html')">All</a></li>
             <li><a href="javascript:void(0);" onclick="changeIframeSrc('cdedit.html')">Edit</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('export.html')">export</a></li>
+            <li><a href="javascript:void(0);" onclick="changeIframeSrc('import.html')">import</a></li>
+        
         </ul>
     </div>
 
