--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
 
-<p>Lump<a href="https://plzsayyes3.github.io/braindump/lightencard/frame.html" target="_blank">次のページ</a></p>
-<p>Lump<a href="https://plzsayyes3.github.io/braindump/futurecard_text/cdv-home.html" target="_blank">次のページ</a></p>
+<p><a href="https://plzsayyes3.github.io/braindump/lightencard/frame.html" target="_blank">Lump</a></p>
+<p><a href="https://plzsayyes3.github.io/braindump/futurecard_text/cdv-home.html" target="_blank">Future Crad</a></p>
 
 </body>
 </html>
