--- a/lightencard/main.html
+++ b/lightencard/main.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>lighten up mind positive</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <style>
@@ -27,7 +27,7 @@
         }
 
         #inputText {
-            width: 30%;
+            min-width: 40%;
             height: 200px;
             margin-bottom: 20px;
             background-color: rgba(255, 255, 255, 0.5); /* 半透明の白い背景 */
