--- a/lightencard/main.html
+++ b/lightencard/main.html
@@ -27,7 +27,7 @@
         }
 
         #inputText {
-            min-width: 40%;
+            width: 325px;
             height: 200px;
             margin-bottom: 20px;
             background-color: rgba(255, 255, 255, 0.5); /* 半透明の白い背景 */
